added pages and links

--- a/index.html
+++ b/index.html
@@ -6,35 +6,53 @@
     <title> document</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
-<body class="container">
+<body class="container" >
 
-    <nav class="navbar navbar-expand-sm vavbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">AmyTisdell</a>
+    <nav class="navbar navbar-expand-sm vavbar-dark bg-dark" >
+        <a class="navbar-brand" href="index.html">Amy Tisdell</a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
         aria-control="navbarNavDropdown" aria-expanded="true" aria-label="toggle navigation">
-         <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
         </button>
         
-        <div class="collapse navbar-collapse" id="navbarNavDropdown"> 
+        
+        <div class="collapse navbar-collapse"  id="navbarNavDropdown"> 
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="page2.html">About Me</a>
+                  <a class="nav-link" href="page2.html">Learn to Count</a>
                 </li>
                 <li class="nav-item dropdown"> 
                     <a class="nav-link dropdown-toggle" href="#" id="navbarNavDropdownMenuLink" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
-                Let's connect!
+                Check this out
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropDownMenuLink">
-                    <a class="dropdown-item" href="#">GitHub</a>
-                    <a class="dropdown-item" href="#">LinkedIn</a>
+                    <a class="dropdown-item" href="links/link.jpeg">Click for a surprise</a>
+                    <a class="dropdown-item" href="links/link2.jpeg">Click for another surprise</a>
+                    <a class="dropdown-item" href="links/link1.jpeg">You know you want to click!</a>
                 </div>
                 </li>
             </ul>
         </div>
     </nav>
+    <P> 
+    Thanks for visiting my website! If you've enjoyed, leave a comment below. 
+    </P>
+    <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque nesciunt vero, corrupti sunt voluptate ea reprehenderit quia dolore aperiam dicta voluptatibus recusandae quisquam, possimus atque minima, cum neque at incidunt.
+    </P>
+    <div class="form-floating">
+    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+    <br>
+    <button id="comment submit"> <!--I would use the ID selector here to have JavaScript collect the input in the 
+    comment form and collect it--> 
+    submit
+    </button>
+  </div>
 
-    <script src="node_modules/jquery/dist/jquery.js"> </script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+  <script src="node_modules/jquery/dist/jquery.js"> </script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+
 </body>
 </html>
