--- a/page2.html
+++ b/page2.html
@@ -13,10 +13,9 @@
          <nav class="navbar navbar-expand-sm vavbar-dark bg-dark">
             <a class="navbar-brand" href="index.html">Amy Tisdell</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
-            aria-control="navbarNavDropdown" aria-expanded="true" aria-label="toggle navigation">
+            aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
-                
             <div class="collapse navbar-collapse" id="navbarNavDropdown"> 
                 <ul class="navbar-nav">
                     <li class="nav-item active">
